# networks_and_telecommunications

./: .gitignore  protocol
report/: Lab1.tex
semester_1/: protocol  system
semester_1/report/: maltcev.tex
semester_1/tcp/client/: main.cpp
semester_1/tcp/server/: Server.cpp  data  main.cpp
semester_1/udp/: CMakeLists.txt  Utility.cpp
semester_1/udp/client/: CMakeLists.txt
semester_1/udp/server/: RequestHandler.cpp  Server.h  hop  main.cpp
semester_2/lab1/: lab1.tex  settings.tex  titlepage.tex
semester_2/lab1/src/: 1  2  3  4  5  5_passive  6  6_server  7
tcp/client/: Client.cpp  Client.h
tcp/server/: CMakeLists.txt  RequestHandler.cpp  Server.cpp  Server.h
tcpip/: CMakeLists.txt  Config.cpp  Config.h  ConsoleHandler.cpp  ConsoleHandler.h  Server.cpp  Server.h  Utility.cpp  Utility.h  client.c  main.cpp  server.cpp
tcpip/client/: CMakeLists.txt  Client.cpp  Client.h  ClientConfig.cpp  ClientConfig.h  client.cpp  main.cpp
tcpip/server/: CMakeLists.txt  Config.cpp  Config.h  ConsoleHandler.cpp  ConsoleHandler.h  FileStorage.cpp  FileStorage.h  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  Utility.cpp  Utility.h  main.c  main.cpp
tcpip/server/model/: FileStorage.cpp  RangeStructure.h  ResultOfTask.h  ResultsOfTask.h  SimpleNumbers.cpp  SimpleNumbers.h
udp/: Config.h  Utility.cpp  Utility.h
udp/client/: Client.cpp  Client.h  main.cpp
udp/server/: CMakeLists.txt  RequestHandler.cpp  RequestHandler.h  Server.cpp  Server.h  data  hop
udp/server/model/: FileStorage.h  SimpleNumbers.cpp  SimpleNumbers.h
(+1 files in other folders)
